minor grammatical error. I win

--- a/docs/N0913799_PPD.md
+++ b/docs/N0913799_PPD.md
@@ -214,7 +214,7 @@ gantt
 
 ### 5.2 Testing Resources
 
-The main reference for following *Behaviour-Driven Development* practices will be Automation Panda’s *BDD 101* series (Knight, A., 2023). It provides reference on using `related tooling` and advice on how best to write Gherkin scripts for features, among general best practice.
+The main reference for following *Behaviour-Driven Development* practices will be Automation Panda’s *BDD 101* series (Knight, A., 2023). It provides reference on using related tooling and advice on how best to write Gherkin scripts for features, among general best practice.
 
 ## 6 Risks
 
@@ -394,4 +394,4 @@ Serious Crime Act 2015 (c.9). Available at: <https://www.legislation.gov.uk/ukpg
 
 Team Asana [pseud.], 2022. Risk matrix template: How to assess risk for project success (with examples) [online]. *Asana*. Available at: <https://asana.com/resources/risk-matrix-template> [Accessed 2 October 2023].
 
-[^1]: This part of the document mentions aspects of previous experience that has been redacted from this online version as a matter of good OPSEC.
+[^1]: This part of the document mentions aspects of previous experience that have been redacted from this online version as a matter of good OPSEC.
